--- a/codeables/app/views/static_pages/root.html.erb
+++ b/codeables/app/views/static_pages/root.html.erb
@@ -6,4 +6,5 @@
     ).html_safe %>
   <% end %>
 </script>
+<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
 <main id="root"></main>
