--- a/codeables/app/assets/stylesheets/api/reset.scss
+++ b/codeables/app/assets/stylesheets/api/reset.scss
@@ -4,7 +4,7 @@
 header, body, footer, section,
 div,
 h1, h2, h3, h4, p
-label, form, button,
+label, form,
 ul, li {
   margin: 0;
   border: 0;
@@ -14,7 +14,7 @@ ul, li {
   text-align: inherit;
   text-decoration: inherit;
   color: inherit;
-  background: inherit;
+  // background: inherit;
 }
 input {
   border: 1px solid black;
