add flexbox to login and sign up form

--- a/app/assets/stylesheets/api/reset.scss
+++ b/app/assets/stylesheets/api/reset.scss
@@ -14,7 +14,7 @@ ul, li {
   text-align: inherit;
   text-decoration: inherit;
   color: inherit;
-  // background: inherit;
+  background: inherit;
 }
 input {
   border: 1px solid black;
