--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -5,6 +5,10 @@
       user: current_user
     ).html_safe %>
   <% end %>
+window.images = {
+  flex_box: "<%= image_path("flexbox.png") %>"
+};
 </script>
 <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+
 <main id="root"></main>
