--- a/app/assets/stylesheets/api/reset.scss
+++ b/app/assets/stylesheets/api/reset.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 header, body, footer, section,
 div,
-h1, h2, h3, h4, p
+h1, h2, h3, h4, p,
 label, form,
 ul, li {
   margin: 0;
