--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -6,7 +6,9 @@
     ).html_safe %>
   <% end %>
 window.images = {
-  flex_box: "<%= image_path("flexbox.png") %>"
+  flex_box: "<%= image_path("flexbox.png") %>",
+  splash: "<%= image_path("code_projects.jpg") %>",
+  logo: "<%= image_path("logo.png") %>"
 };
 </script>
 <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
