--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -15,6 +15,9 @@
   justify-content: space-between;
 }
 
+.center {
+  justify-content: center;
+}
 
 .nav-bottom {
   height: 36px;
@@ -55,8 +58,8 @@
   font-size: 16px;
   display: flex;
   flex-direction: row;
-
 }
+
 .material-icons, .searchbar {
   max-height: 22px;
   height: 22px;
@@ -82,6 +85,7 @@
   cursor: pointer;
   color: #f6f6f6;
   background-color: #c8c8c8;
+  margin-right: 10px;
 }
 
 .login-signup {
