display different errors on login and signup page

--- a/app/assets/stylesheets/api/error.scss
+++ b/app/assets/stylesheets/api/error.scss
@@ -42,9 +42,15 @@
   border-radius: 3px;
   margin-bottom: 20px;
   padding: 2px 4px;
+  display: flex;
+}
+
+.error-message {
+  margin: 19px;
 }
 
 .box-error-message {
+  text-align: center;
   color: #fff;
 }
 .hidden {
