--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -142,7 +142,7 @@
 // align-self accepts same value as align-items
 
 //
-// Oh no! The frogs are all squeezed onto a single row of lilypads. Spread them out using the flex-wrap property, which accepts the following values:
+// flex-wrap property, which accepts the following values:
 //
 // nowrap: Every item is fit to a single line.
 // wrap: Items wrap around to additional lines.
