--- a/app/assets/stylesheets/api/reset.scss
+++ b/app/assets/stylesheets/api/reset.scss
@@ -20,5 +20,8 @@ input, button {
   border: 1px solid black;
   border-radius: 6px;
 }
+a {
+  text-decoration: none;
+}
 
  // input not reseting input to keep border
