work on adding step reducer

--- a/app/assets/stylesheets/api/form.scss
+++ b/app/assets/stylesheets/api/form.scss
@@ -8,6 +8,32 @@
 
 .project-form {
   height: 182px;
+  width: 970px;
+  display: flex;
+  flex-direction: column;
+  // align-items: flex-end;
+  justify-content: space-between;
+}
+
+.project-inner {
+  height: 120px;
+  position: relative;
+}
+
+.cover-img {
+  position: absolute;
+  height: 120px;
+  width: 128px;
+  left: 89px;
+  top: 5px;
+  border: 1px solid white;
+  border-radius: 9px;
+}
+.add-file {
+  color: white;
+
+  width: 550px;
+  height: 130px
 }
 
 .form-outer {
