add a modal to input projects.

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -9,7 +9,8 @@
 window.images = {
   flex_box: "<%= image_path("flexbox.png") %>",
   splash: "<%= image_path("code_projects.jpg") %>",
-  logo: "<%= image_path("logo.png") %>"
+  logo: "<%= image_path("logo.png") %>",
+  header: "<%= image_path("header.png") %>"
 };
 </script>
 <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
