--- a/app/assets/stylesheets/api/modal.scss
+++ b/app/assets/stylesheets/api/modal.scss
@@ -5,6 +5,7 @@
 }
 
 #project-modal-title {
+  margin-top: 45px;
   text-align: center;
   font-size: 18px;
   font-family: Helvetica, Arial, sans-serif;
@@ -19,19 +20,6 @@
   font-size: 18px;
   width: 370px;
   margin: 20px 0;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  text-align: center;
-}
-
-#modal-description-input {
-  border: 0;
-  height: 100px;
-  border-bottom: solid 1px #c9c9c9;
-  transition: border .3s;
-  font-size: 18px;
-  width: 370px;
-  // margin: 0px 0;
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   text-align: center;
@@ -55,5 +43,10 @@
   vertical-align: middle;
 }
 
+#Modal {
+  // border: 10px solid green;
+  // background-color: green;
+  // backgroundColor : rgba(255, 255, 255, 1)
+}
 // 190 width
 // 50 height
