--- a/app/assets/stylesheets/api/form.scss
+++ b/app/assets/stylesheets/api/form.scss
@@ -1,41 +1,41 @@
-.form-container {
-  width: 1016px;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  background-color: #f6f6f6;
-}
-
-.project-form {
-  height: 182px;
-  width: 970px;
-  display: flex;
-  flex-direction: column;
-  // align-items: flex-end;
-  justify-content: space-between;
-}
-
-.project-inner {
-  height: 120px;
-  position: relative;
-}
-
-.cover-img {
-  position: absolute;
-  height: 120px;
-  width: 128px;
-  left: 89px;
-  top: 5px;
-  border: 1px solid white;
-  border-radius: 9px;
-}
-.add-file {
-  color: white;
-
-  width: 550px;
-  height: 130px
-}
-
-.form-outer {
-  background-color: #d4e1e7;
-}
+// .form-container {
+//   width: 1016px;
+//   margin: auto;
+//   display: flex;
+//   justify-content: center;
+//   background-color: #f6f6f6;
+// }
+//
+// .project-form {
+//   height: 182px;
+//   width: 970px;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: flex-end;
+//   justify-content: space-between;
+// }
+//
+// .project-inner {
+//   height: 120px;
+//   position: relative;
+// }
+//
+// .cover-img {
+//   position: absolute;
+//   height: 120px;
+//   width: 128px;
+//   left: 89px;
+//   top: 5px;
+//   border: 1px solid white;
+//   border-radius: 9px;
+// }
+// .add-file {
+//   color: white;
+//
+//   width: 550px;
+//   height: 130px
+// }
+//
+// .form-outer {
+//   background-color: #d4e1e7;
+// }
