--- a/app/assets/stylesheets/api/project_edit.scss
+++ b/app/assets/stylesheets/api/project_edit.scss
@@ -46,7 +46,9 @@
   border-bottom-left-radius: 9px;
   height: 96%;
 }
-
+.text-to-test {
+  position: absolute;
+}
 .edit-view-clicker {
   color: #AAA;
   background-color: #fff;
@@ -121,13 +123,6 @@
 // }
 //
 
-// .add-file {
-//   color: white;
-//
-//   width: 550px;
-//   height: 130px
-// }
-//
 // .form-outer {
 //   background-color: #d4e1e7;
 // }
