--- a/app/assets/stylesheets/api/error.scss
+++ b/app/assets/stylesheets/api/error.scss
@@ -56,3 +56,55 @@
 .hidden {
   display: none;
 }
+
+.modal-section {
+  display: flex;
+  flex-direction: column;
+  width: 585px;
+  height: 90px;
+  padding-left: 15px;
+  padding-top: 15px;
+  background-color: #f2dede;
+  border-color: #eed3d7;
+  color: #b94a48;
+  text-shadow: 0 1px 0 rgba(255,255,255,0.5);
+  border-radius: 4px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  // padding: 20px;
+}
+.confirm {
+  font-weight: bold;
+  margin-bottom: 2px;
+}
+.cancel {
+  background-image: none;
+  color: #333;
+  text-decoration: none;
+  background-color: #f5f5f5;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 400;
+  cursor: pointer;
+  text-shadow: none;
+  height: 33px;
+  width: 65px;
+  font-family: Helvetica, Arial, sans-serif;
+  text-shadow: 0 1px 1px rgba(255,255,255,0.75);
+}
+
+.sure {
+  margin-bottom: 5px;
+}
+.delete {
+  font-family: Helvetica, Arial, sans-serif;
+  margin-left: 2px;
+  height: 33px;
+  width: 65px;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #fff;
+  border-color: #bd362f #bd362f #802420;
+  background-color: #da4f49;
+}
