--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -10,7 +10,8 @@ window.images = {
   flex_box: "<%= image_path("flexbox.png") %>",
   splash: "<%= image_path("code_projects.jpg") %>",
   logo: "<%= image_path("logo.png") %>",
-  header: "<%= image_path("header.png") %>"
+  header: "<%= image_path("header.png") %>",
+  codingIsFun: '<%= image_path("coding-is-fun.jpg") %>'
 };
 </script>
 <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
