--- a/app/assets/stylesheets/api/edit_page.scss
+++ b/app/assets/stylesheets/api/edit_page.scss
@@ -3,12 +3,13 @@
   padding-top: 40px;
   padding-bottom: 130px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .update-inner {
   width: 1020px;
-  height: 1005px;
+  min-height: 1005px;
   background: #fff;
   border-radius: 9px;
   border: 1px solid rgba(119,130,135,.4);
@@ -21,7 +22,7 @@
   position: relative;
   margin-top: 45px;
   width: 800px;
-  height: 600px;
+  min-height: 600px;
   background-color: #f6f6f6;
   display: flex;
   flex-direction: column;
@@ -29,6 +30,8 @@
   border: 1px solid #CCC;
   background-color: #f6f6f6;
   border-radius: 12px;
+  margin-bottom: 50px;
+
   // justify-content: center;
 }
 .update-file {
@@ -64,7 +67,7 @@
   box-shadow: inset 0 0 3px rgba(0,0,0,0.15);
   border: 1px solid #ccc;
   font-family: Helvetica, Arial, sans-serif;
-  margin-top: 30px;
+  margin-top: 10px;
   min-height: 30px;
   border-radius: 10px;
   font-weight: bold;
@@ -74,7 +77,7 @@
 }
 
 .description {
-  margin-top: 30px;
+  margin-top: 15px;
   background-color: #fff;
   box-shadow: inset 0 0 3px rgba(0,0,0,0.15);
   border: 1px solid #ccc;
@@ -84,8 +87,11 @@
   font-size: 18px;
   padding-left: 10px;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  width: 760px;
-  height: 310px;
+  width: 95%;
+  max-width: 95%;
+  min-height: 310px;
+  margin-bottom: 20px;
+
 }
 .add-file-overlay {
   position: absolute;
@@ -93,7 +99,7 @@
   line-height: 120px;
   left: 153px;
   margin-bottom: 5px;
-  height: 120px;
+  min-height: 120px;
   background-color: #f6f6f6;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -106,6 +112,29 @@
   margin-bottom: 4px;
 }
 
+.save {
+  display: flex;
+  justify-content: center;
+}
+.save-button {
+  background-color: #f6f6f6;
+  border-color: #dedede;
+  color: #333;
+  min-height: 50px;
+  min-width: 100%;
+  font-size: 14px;
+  font-family: Helvetica, Arial, sans-serif;
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.15);
+  color: #AAA;
+  // font-weight: bold;
+}
+#step-delete {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  min-width: 800px;
+  color: #fff;
+  background-color: #bf4a52;
+}
 
 .add-file {
 	position: relative;
@@ -115,7 +144,7 @@
 	z-index: 2;
   width: 600px;
   margin-left: 150px;
-  height: 116px;
+  min-height: 116px;
   cursor: pointer;
   outline: none;
 }
