--- a/app/assets/stylesheets/api/edit_page.scss
+++ b/app/assets/stylesheets/api/edit_page.scss
@@ -116,7 +116,9 @@
   display: flex;
   justify-content: center;
 }
+
 .save-button {
+  margin-top: 15px;
   background-color: #f6f6f6;
   border-color: #dedede;
   color: #333;
@@ -131,7 +133,7 @@
 #step-delete {
   margin-top: 10px;
   margin-bottom: 10px;
-  min-width: 800px;
+  // min-width: 800px;
   color: #fff;
   background-color: #bf4a52;
 }
@@ -140,7 +142,7 @@
 	position: relative;
 	text-align: right;
   vertical-align: center;
-	opacity: 0;
+	opacity  : 0;
 	z-index: 2;
   width: 600px;
   margin-left: 150px;
@@ -148,132 +150,3 @@
   cursor: pointer;
   outline: none;
 }
-
-// .edit-img {
-//   position: absolute;
-//   height: 120px;
-//   width: 128px;
-//   left: 17px;
-//   top: 12px;
-//   border: 1px solid white;
-//   border-radius: 9px;
-// }
-
-//
-// .edit-view-inner {
-//   width: 1016px;
-//   min-height: 590px;
-//   margin: auto;
-//   display: flex;
-//   flex-direction: column;
-//
-//   background-color: #f6f6f6;
-//   border-radius: 9px;
-// }
-//
-// .edit-view-ind {
-//   position: relative;
-//   display: flex;
-//   width: 975px;
-//   height: 145px;
-//   background-color: #f6f6f6;
-//   display: flex;
-//   align-items: center;
-//   border: 1px solid #ddd;
-//   border-radius: 8px;
-//   margin-top: 15px;
-//
-//   // justify-content: center;
-// }
-// .edit-view-top {
-//   height: 45px;
-//
-//   // background: green;
-// }
-// .edit-view-bottom {
-//   padding-top: 35px;
-//   width: 100%;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   background-color: #fff;
-//   border-bottom-right-radius: 9px;
-//   border-bottom-left-radius: 9px;
-//   height: 96%;
-// }
-//
-// .edit-view-clicker {
-//   color: #AAA;
-//   background-color: #fff;
-//   height: 119px;
-//   width: 400px;
-//   margin-left: 155px;
-//   border-radius: 6px;
-//   box-shadow: inset 0 0 3px rgba(0,0,0,0.15);
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   border: 1px solid #dedede;
-//   font-family: Helvetica, Arial, sans-serif;
-//   font-size: 20px;
-//   cursor: pointer;
-//
-// }
-//
-
-// .intro-text {
-//   margin-left: 20px;
-//   color: #333;
-//   font-family: Helvetica, Arial, sans-serif;
-//   font-size: 14px;
-//   font-weight: bold;
-// }
-//
-//
-// .add-step {
-//   margin-top: 35px;
-//   padding: 11px 19px;
-//   font-size: 17.5px;
-//   border-radius: 6px;
-//   border-color: #dedede;
-//   color: #333;
-//   font-family: Helvetica, Arial, sans-serif;
-//   background-color: #f6f6f6;
-//   margin-bottom: 155px;
-//   text-shadow: 0 1px 1px rgba(255,255,255,0.75);
-//   outline: none;
-//   cursor: pointer;
-// }
-
-
-
-
-// .form-container {
-//   width: 1016px;
-//   margin: auto;
-//   display: flex;
-//   justify-content: center;
-//   background-color: #f6f6f6;
-// }
-//
-// .project-form {
-//   height: 182px;
-//   width: 970px;
-//   display: flex;
-//   flex-direction: column;
-//   // align-items: flex-end;
-//   justify-content: space-between;
-// }
-//
-// .project-inner {
-//   height: 120px;
-//   position: relative;
-// }
-//
-
-
-//
-// .form-outer {
-//   background-color: #d4e1e7;
-// }
