--- a/app/assets/stylesheets/api/projects.scss
+++ b/app/assets/stylesheets/api/projects.scss
@@ -18,7 +18,8 @@
 .projects-ul {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 80px
+  margin-top: 80px;
+  justify-content: center;
 }
 
 .project-image {
@@ -63,6 +64,49 @@
   font-size: 13px;
 }
 
+.search-outer {
+   background: #d4e1e7;
+   padding-top: 35px;
+   padding-bottom: 250px;
+}
+.search-inner {
+  background-color: white;
+}
+
+.search-top-bar {
+  display: flex;
+  min-height: 115px;
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, .15);
+  box-shadow: -1px 3px 3px rgba(0, 0, 0, 0.1);
+  background: #f5f5f5;
+  justify-content: center;
+  align-items: center;
+}
+
+.code-big{
+  font-size: 32px;
+  font-family: 'Caveat Brush';
+  letter-spacing: 2px;
+ }
+
+.searchbar-big {
+  font-size: 18px;
+  color: #757575;
+  height: 25px;
+  margin-left: 10px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  padding: 4px 6px;
+}
+ // .lets-code {
+ //   font-family: 'Caveat Brush';
+ //   font-size: 16px;
+ //   display: flex;
+ //   flex-direction: row;
+ // }
 // const toggleDropdown = () => {
 // 	$('#gear-dropdown').toggleClass('hidden');
 // };
