--- a/app/assets/stylesheets/api/project-show.scss
+++ b/app/assets/stylesheets/api/project-show.scss
@@ -106,3 +106,26 @@
   margin-left: 5px;
   padding: 7px 15px;
 }
+
+.comment-container {
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  padding: 20px 0;
+  border-top: 1px solid #e9e9e9;
+  background-image: image_url("comment-gray.png");
+}
+
+.comment-author {
+  font-weight: 700;
+  color: #e86c00;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.comment-body {
+  font-size: 16px;
+  color: #333;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  margin-top: 20px;
+}
