--- a/app/assets/stylesheets/api/project-show.scss
+++ b/app/assets/stylesheets/api/project-show.scss
@@ -129,3 +129,55 @@
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   margin-top: 20px;
 }
+.delete-comment {
+  font-size: 12px;
+  color: #e86c00;
+  text-decoration: none;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  background: none;
+  border: none;
+}
+
+.comment-delete-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.comment-outer {
+  padding: 12px;
+  background: #f6f6f6;
+  border: 1px solid #ddd;
+  min-height: 180px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.comment-text {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-right: 5px;
+  position: relative;
+  overflow: auto;
+  padding: 10px;
+  padding-bottom: 5px;
+  background: #fff;
+  min-width: 95%;
+  max-width: 95%;
+  min-height: 125px;
+  color: #333;
+  font-size: 14px;
+}
+.post-comment {
+  margin-top: 15px;
+  background-color: #df6902;
+  border-color: #c55b00;
+  color: #fff;
+  border: 1px solid transparent;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  padding: 8px 12px;
+}
