fix display error in previous commit, add opacity to pointer

--- a/app/assets/stylesheets/api/project_edit.scss
+++ b/app/assets/stylesheets/api/project_edit.scss
@@ -72,6 +72,20 @@
   border: 1px solid white;
   border-radius: 9px;
 }
+.opacity {
+  opacity: .05;
+}
+.add-an-img {
+  position: absolute;
+  height: 120px;
+  width: 128px;
+  left: 17px;
+  top: 12px;
+  border: 1px solid white;
+  border-radius: 9px;
+  text-align: center;
+  vertical-align: center;
+}
 .intro-text {
   margin-left: 20px;
   color: #333;
