--- a/app/assets/stylesheets/api/projects.scss
+++ b/app/assets/stylesheets/api/projects.scss
@@ -68,6 +68,7 @@
    background: #d4e1e7;
    padding-top: 35px;
    padding-bottom: 250px;
+   min-height: 516px;
 }
 .search-inner {
   background-color: white;
