--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -11,7 +11,8 @@ window.images = {
   splash: "<%= image_path("code_projects.jpg") %>",
   logo: "<%= image_path("logo.png") %>",
   header: "<%= image_path("header.png") %>",
-  codingIsFun: '<%= image_path("coding-is-fun.jpg") %>'
+  codingIsFun: '<%= image_path("coding-is-fun.jpg") %>',
+  rightPointer: '<%= image_path("right_pointer.png") %>'
 };
 </script>
 <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
