--- a/app/assets/stylesheets/api/splash.scss
+++ b/app/assets/stylesheets/api/splash.scss
@@ -1,6 +1,6 @@
 .splash {
   width: 100%;
-  height: 100%;
+  max-height: 800px;
   display: block;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
