--- a/app/assets/stylesheets/api/project-show.scss
+++ b/app/assets/stylesheets/api/project-show.scss
@@ -66,6 +66,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 8px;
 
 }
 .show-img {
@@ -86,6 +87,7 @@
   margin: 12px 0;
   font-weight: 700;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  margin-left: 10px;
 }
 
 .show-logo {
