--- a/app/assets/stylesheets/api/edit_page.scss
+++ b/app/assets/stylesheets/api/edit_page.scss
@@ -130,12 +130,25 @@
   color: #AAA;
   // font-weight: bold;
 }
-#step-delete {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  // min-width: 800px;
-  color: #fff;
-  background-color: #bf4a52;
+.step-delete {
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+#clear-icon {
+  position: absolute;
+  left: 940px;
+  border: none;
+  background-color: transparent;
+  color: #cecccc;
+  top: 40px;
+  opacity: 0;
+}
+.edit-view-ind:hover #clear-icon {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: opacity .6s;
 }
 
 .add-file {
@@ -149,4 +162,19 @@
   min-height: 116px;
   cursor: pointer;
   outline: none;
+}
+
+#publish {
+  background-color: #e86c00;
+  border-color: #cf6000;
+  color: #fff;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  padding: 6px 6px;
+  text-shadow: none;
 }
