--- a/app/assets/stylesheets/api/project_edit.scss
+++ b/app/assets/stylesheets/api/project_edit.scss
@@ -115,8 +115,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 10px;
-  margin-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-bottom: 1px solid #DDD;
+  padding-bottom: 5px;
 }
 
 .delete-button {
