add seeds, remove focus from all buttons

--- a/app/assets/stylesheets/api/reset.scss
+++ b/app/assets/stylesheets/api/reset.scss
@@ -17,6 +17,9 @@ input, button {
   border: 1px solid black;
   border-radius: 6px;
 }
+button:focus {
+  outline: 0;
+}
 a {
   text-decoration: none;
 }
