--- a/app/assets/stylesheets/api/edit_page.scss
+++ b/app/assets/stylesheets/api/edit_page.scss
@@ -74,19 +74,18 @@
 
 .description {
   margin-top: 15px;
-  background-color: #fff;
-  box-shadow: inset 0 0 3px rgba(0,0,0,0.15);
-  border: 1px solid #ccc;
-  font-family: Helvetica, Arial, sans-serif;
-  border-radius: 10px;
-  font-weight: bold;
-  font-size: 18px;
+  // background-color: #fff;
+  // box-shadow: inset 0 0 3px rgba(0,0,0,0.15);
+  // border: 1px solid #ccc;
+  // font-family: Helvetica, Arial, sans-serif;
+  // border-radius: 10px;
+  // font-size: 18px;
   padding-left: 10px;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  width: 95%;
-  max-width: 95%;
-  min-height: 310px;
-  margin-bottom: 20px;
+  // width: 95%;
+  // max-width: 95%;
+  // min-height: 310px;
+  // margin-bottom: 20px;
 
 }
 .add-file-overlay {
