--- a/app/assets/stylesheets/api/quill.scss
+++ b/app/assets/stylesheets/api/quill.scss
@@ -1,22 +1,16 @@
-// #toolbar {
-//   width: 100px;
-//   height: 20px;
-//   border: 1px solid green;
-// }
-//
-//
-// #editor {
-//   border: 1px solid black;
-// }
-
-
-
 /*!
  * Quill Editor v1.2.2
  * https://quilljs.com/
  * Copyright (c) 2014, Jason Chen
  * Copyright (c) 2013, salesforce.com
  */
+ .hello {
+   width: 97%;
+   margin-top: 15px;
+   min-height: 310px;
+   margin-bottom: 20px;
+ }
+
 .ql-container {
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
@@ -55,7 +49,12 @@
   text-align: left;
   white-space: pre-wrap;
   word-wrap: break-word;
+  background-color: #fff;
+  min-height: 310px;
 }
+
+
+
 .ql-editor p,
 .ql-editor ol,
 .ql-editor ul,
@@ -821,10 +820,11 @@
   background-color: #000;
 }
 .ql-toolbar.ql-snow {
-  border: 1px solid #ccc;
+  border: 1px solid #ddd;
+  border-bottom: 1px solid #b8b8b8;
   box-sizing: border-box;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-  padding: 8px;
+  padding: 4px;
 }
 .ql-toolbar.ql-snow .ql-formats {
   margin-right: 15px;
