added a loading spinner for saving files

--- a/app/assets/stylesheets/api/projects.scss
+++ b/app/assets/stylesheets/api/projects.scss
@@ -1,3 +1,11 @@
+.splash {
+  width: 100%;
+  max-height: 600px;
+  display: block;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+
 .outer-project-container {
   display: flex;
   flex-direction: column;
