added error messages when trying to upload files that aren't images.

--- a/app/assets/stylesheets/api/edit_page.scss
+++ b/app/assets/stylesheets/api/edit_page.scss
@@ -99,8 +99,10 @@
 
 .save {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
+
 
 .save-button {
   cursor: pointer;
