--- a/app/assets/stylesheets/api/project_edit.scss
+++ b/app/assets/stylesheets/api/project_edit.scss
@@ -109,15 +109,76 @@
 }
 
 .edit-view-top {
-  height: 45px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding-left: 10px;
-  padding-right: 10px;
   border-bottom: 1px solid #DDD;
-  padding-bottom: 5px;
+  padding: 10px 10px;
 }
+.images {
+  width: 100%;
+  position: relative;
+  height: 125px;
+  margin-bottom: 10px;
+}
+
+.new-file-overlay {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #eee;
+  -webkit-box-shadow: inset 0 0 3px 3px #dfdfdf;
+  border: 1px solid #dedede;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  color: #AAA;
+  font-size: 20px;
+}
+.upload-file {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 1000;
+}
+
+.add-file {
+	position: relative;
+	text-align: right;
+  vertical-align: center;
+	opacity  : 0;
+	z-index: 2;
+  width: 600px;
+  margin-left: 150px;
+  min-height: 116px;
+  cursor: pointer;
+  outline: none;
+}
+
+// .add-file-overlay {
+//   position: absolute;
+//   text-align: center;
+//   line-height: 120px;
+//   left: 153px;
+//   margin-bottom: 5px;
+//   min-height: 120px;
+//   background-color: #f6f6f6;
+//   border: 1px solid #ddd;
+//   border-radius: 8px;
+//   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.15);
+//   width: 600px;
+//   font-family: Helvetica, Arial, sans-serif;
+//   font-size: 20px;
+// }
+// .file-overlay {
+//   margin-bottom: 4px;
+// }
+
+
 
 .delete-button {
   border: 1px #f5d8da;
